# typeswap

./: README.md  setup.cfg
typeswap/: __init__.py  __main__.py
