[metadata]
name = typeswap
version = 1.0
description = Swap variable types fast!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ra1ncoat.github.io/typeswap
author = ra1ncoat
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = typeswap
[options.entry_points]
console_scripts =
    typeswap=typeswap:main
